# rpm-ble-abstraction

./: .gitignore  README.md  pyproject.toml  requirements.txt
fhir_mapping/: README.md  blood_pressure.yaml  pulse_oximeter.yaml  weight.yaml
gatt_registry/cache/: uuid_lookup.json
gatt_registry/decode_registry/: README.md  blood_pressure.yaml  pulse_oximeter.yaml  weight_scale.yaml
gatt_registry/gatt_specs_yaml/: PLXService_v1.0.1.md  org.bluetooth.characteristic.date_time.yaml  org.bluetooth.characteristic.record_access_control_point.yaml
gatt_registry/gatt_specs_yaml/blood_pressure/: org.bluetooth.characteristic.blood_pressure_feature.yaml  org.bluetooth.characteristic.blood_pressure_measurement.yaml  org.bluetooth.characteristic.blood_pressure_record.yaml  org.bluetooth.characteristic.enhanced_blood_pressure_measurement.yaml  org.bluetooth.characteristic.enhanced_intermediate_cuff_pressure.yaml  org.bluetooth.characteristic.intermediate_cuff_pressure.yaml
gatt_registry/gatt_specs_yaml/weight_scale/: org.bluetooth.characteristic.weight.yaml  org.bluetooth.characteristic.weight_measurement.yaml  (+1 more)
gatt_registry/tools/: build_uuid_cache.py
src/ble_plugin/: README.md  __init__.py  ble_client.py  bleak_client.py  decoder.py  discovery_models.py  exceptions.py  models.py  schema.py  yaml_loader.py
src/ble_plugin/tools/: __init__.py  (+1 more)
testing/: simulator.py  test_bleak_client_models.py  test_decoder.py  test_yaml_loader.py
testing/ble-simulator/: README.md  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
(+19 files in other folders)
