[project]
name = "rpm-ble-abstraction"
version = "0.1.0"
description = "A sensor abstraction layer for heterogeneous BLE healthcare devices."
dependencies = [
    "PyYAML>=6.0.1",
    "bleak>=0.21",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["testing"]
pythonpath = ["src"]
asyncio_mode = "auto"
